--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,14 +16,33 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
 android {
-    namespace = 'org.firstinspires.ftc.teamcode'
 
     packagingOptions {
-        jniLibs.useLegacyPackaging true
+        jniLibs {
+            pickFirsts += ['**/*.so']
+        }
+    }
+    namespace = 'org.firstinspires.ftc.teamcode'
+    androidResources {
+        noCompress 'tflite'
     }
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:dev-SNAPSHOT'
     implementation project(':FtcRobotController')
+    implementation 'org.openftc:easyopencv:1.5.2'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.1'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
+    implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+}
+
+dependencies {
+    implementation 'org.openftc:apriltag:1.1.0'
 }
