--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -33,11 +33,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:dev-SNAPSHOT'
+    //implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:dev-SNAPSHOT'
     implementation project(':FtcRobotController')
     implementation 'org.openftc:easyopencv:1.5.2'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
-    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.1'
+    //implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.1'
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
